<resources>
    <string name="app_name">covidDiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infoText">All the best. \nYou\'ll need it.\nAnything else you wanna let me know?</string>
    <string name="details_hint">So today...</string>
    <string name="commute_label">Input Details about your commute.</string>
    <string name="hallTicketCheck">Hall Ticket</string>
    <string name="modeOfTransportTextView">How will you be commuting today?</string>
    <string name="save_button_add_entry">Next</string>
    <string name="login_with_google">Sign in with Google\nTo save your data</string>
    <string name="sign_up">Sign In</string>
    <string name="add_entry_prompt">"Hey %s, how will you be commuting today?"</string>
    <string name="profile_greeting_text">Hey there, All the best. \nYou do the writing, we do the tracking :)</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="favorites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="upload_to_cloud">Upload To Cloud</string>
    <string name="text_view_preferences">Preferences</string>
    <string name="name">Abhishek</string>
    <string name="status_user">Status : No Exposure (Experimental)</string>
    <string name="activity_map">Travel Record</string>
    <string name="date_text">8</string>
    <string name="month_text">April</string>
    <string name="th_text">th</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>