<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="16dp"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/date_picker_layout"
        android:orientation="vertical">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/inner_date_picker_layout">

    <TextView
        android:id="@+id/date_text"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:padding="2dp"
        android:text="@string/date_text"
        android:textSize="20sp"
        tools:text="8" />

    <TextView
        android:id="@+id/th_text"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="18dp"
        android:padding="1dp"
        android:text="@string/th_text"
        android:textSize="10sp"
        tools:text="th" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/month_text"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:padding="2dp"
            android:text="@string/month_text"
            android:textSize="20sp"
            tools:text="April" />
    </LinearLayout>
    </LinearLayout>
</layout>